--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>My First Parcel App</title>
+    <title>Grafica pe calculator</title>
+    <!-- Aceste scripturi sunt plasate aici astfel incat pana executia ajunge la <body> sunt deja incaricate. -->
+    <script src="https://unpkg.com/rxjs@6.6.3/bundles/rxjs.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r123/three.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
+    <!-- acest script este plasat aici astfel incat sa fie deja incaricate scripturie din care depinde si sa fie remas
+    de incaricat de cat texturele -->
     <script src="./src/main.js"></script>
 <!--    <script src="./src/playground.js"></script>-->
   </body>
