--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <div id="app"></div>
     <script src="./src/main.js"></script>
+<!--    <script src="./src/playground.js"></script>-->
   </body>
 </html>
